--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,14 @@
-# https://www.rockyourcode.com/how-to-deploy-eleventy-to-github-pages-with-github-actions/
-
 name: Build Eleventy
-
-on:
-  push:
-    branches:
-      - master
-
+on: [push]
 jobs:
-  build:
-    runs-on: ubuntu-20.04
-
-    strategy:
-      matrix:
-        node-version: [12.x]
-
+  build_and_deploy:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Install dependencies & build
-        run: |
-          npm ci
-          npm run build
-
+      - uses: actions/checkout@master
+      - name: Build
+        uses: TartanLlama/actions-eleventy@master
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@master
         with:
-          publish_dir: ./dist
+          publish_dir: dist
           github_token: ${{ secrets.GITHUB_TOKEN }}
