updating github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,21 @@
 name: Build Eleventy
+
 on: [push]
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@master
+
       - name: Build
         uses: TartanLlama/actions-eleventy@v1.2
+        with:
+          install_dependencies: true
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.7.3
         with:
-          publish_dir: dist
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
