--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "wcag-reference",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx eleventy --serve",
-    "build": "npx eleventy"
+    "start": "npx @11ty/eleventy --serve",
+    "build": "npx @11ty/eleventy"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
