--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,29 @@
 name: Build Eleventy
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  build_and_deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
 
       - name: Build
-        uses: TartanLlama/actions-eleventy@v1.2
-        with:
-          install_dependencies: true
+        run: npm ci && npm run build
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3.7.3
+        uses: peaceiris/actions-gh-pages@v3.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: dist
+          publish_branch: gh-pages
